# Carefinde_Dev_2026

./: .gitignore  pyproject.toml  render.yaml  routes.py
.memex/: context.md
plans/2026-02-22_carefinde_rebuild/tasks/: map_tasks.json  migration_neon_render.json  tasks.json
static/: algemene_voorwaarden.html  dashboard_admin.html  dashboard_partner.html  index.html  login.html
